add integration tests + fixes (#5)